--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "sequelize": "^4.1.0",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "chai": "^4.0.2",
