--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "sequelize": "^4.1.0",
     "sqlite3": "^3.1.8"
